# agency-radar

./: .gitignore  README.md  pyproject.toml
config/: profiles.json
data/: initial_outreach_contacts.csv  sample_contacts.csv
docs/: catalog.html  index.html  mini-brief.html  pricing.html  sample-report.html
ops/: go-to-market.md  launch-blockers.md  outbound-playbook.md
reports/: federal_cloud_data.csv  federal_cloud_data.html  federal_cloud_data.json  federal_cloud_data.md  federal_cloud_data_prospects.csv  federal_cloud_data_prospects.html  federal_cloud_data_prospects.json  federal_cloud_data_prospects.md  federal_construction_it.csv  federal_construction_it.html  federal_construction_it.json  federal_construction_it.md  federal_construction_it_prospects.csv  federal_construction_it_prospects.html  federal_construction_it_prospects.json  federal_construction_it_prospects.md  federal_cyber.csv  federal_cyber.html  federal_cyber.json  federal_cyber.md  federal_cyber_prospects.csv  federal_cyber_prospects.html  federal_cyber_prospects.json  federal_cyber_prospects.md  federal_health_it.csv  federal_health_it.html  federal_health_it.json  federal_health_it.md  federal_health_it_prospects.csv  federal_health_it_prospects.html  federal_health_it_prospects.json  federal_health_it_prospects.md  federal_it.csv  federal_it.html  federal_it.json  federal_it.md  federal_it_prospects.csv  federal_it_prospects.html  federal_it_prospects.json  federal_it_prospects.md
templates/: outreach-email.md  outreach-followup.md
tests/: test_analysis.py  test_billing.py  (+1 more)
(+29 files in other folders)
